# CarShareX

./: BUILD_AND_RUN.md  CARSHAREX_MIGRATION_ROADMAP.md  DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  README.md  ОПИСАНИЕ_ПРОЕКТА_ДЛЯ_ЗАЩИТЫ.txt
.github/workflows/: build-complete.yml  build-executables.yml  build-tauri.yml
CarShareXAPI/: .gitignore  CarShareXAPI.csproj  Program.cs  README.md  build-backend.bat  build-backend.sh  build-debug.bat  build.bat  build.ps1  build.sh
CarShareXAPI/Controllers/: AdminBookingsController.cs  AdminBranchesController.cs  AdminEmployeesController.cs  AdminIncidentsController.cs  AdminParkingController.cs  AdminStatsController.cs  AdminTariffsController.cs  AdminUsersController.cs  AdminVehiclesController.cs  AuthController.cs  BookingsController.cs  EmployeeAuthController.cs  ParkingZonesController.cs  ProfileController.cs  TariffsController.cs  TransactionsController.cs  UpdateImagesController.cs  VehiclesController.cs
CarShareXAPI/Data/: CarShareContext.cs  DatabaseInitializer.cs
CarShareXAPI/Models/: Models.cs
back/: .env.example  FULL_ARCHITECTURE.md  main.py  requirements.txt
back/db/: database.py  init_data.py  models.py
front/: .env.example  DESKTOP.md  FRONTEND_ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js
front/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
front/src-tauri/src/: lib.rs  main.rs
releases/: CarShareX-1.0.0-1.x86_64.rpm  CarShareX_1.0.0_amd64.deb  README.md  WINDOWS_WEBVIEW2_FIX.md  copy-webview2-dll.bat  fix-dll-windows.bat  install-webview2.bat
(+80 files in other folders)
