[package]
name = "carsharex"
version = "1.0.0"
description = "CarShareX Desktop Application"
authors = ["CarShareX Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "carsharex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a build script should be run (e.g., for OS-specific builds)
custom-protocol = ["tauri/custom-protocol"]
